--- a/Tactoc/pom.xml
+++ b/Tactoc/pom.xml
@@ -27,7 +27,42 @@
     <artifactId>guice</artifactId>
     <version>3.0</version>
 </dependency>
+  <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.1.0</version>
+    <scope>test</scope>
+</dependency>
+  <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>3.0.0</version>
+</dependency>
+  <!-- https://mvnrepository.com/artifact/info.cukes/gherkin -->
+<dependency>
+    <groupId>info.cukes</groupId>
+    <artifactId>gherkin</artifactId>
+    <version>2.12.2</version>
+    <scope>provided</scope>
+</dependency>
   
+  
+  
+  <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>2.0.0</version>
+</dependency>
+  
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->  
+   <dependency>  
+	 <groupId>io.github.bonigarcia</groupId>  
+	 <artifactId>webdrivermanager</artifactId>  
+	 <version>1.7.2</version>  
+ </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
